got mostly everything to work

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
-    "handlebars": "^4.0.12",
-    "mongoose": "^5.4.9"
+    "handlebars": "^4.1.0",
+    "mongoose": "^5.4.9",
+    "morgan": "^1.9.1"
   }
 }
